# spam_detector

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  trainer.py
extension/: content.js  manifest.json  popup.html  popup.js
server/: routes.py
server/models/: enums.py  train_nb_model.py  train_rf_model.py  train_svm_model.py  utils.py
