[project]
name = "spam-detector"
version = "0.1.0"
description = "CSC583 term project. Spam detector"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.7",
    "ipython>=8.18.1",
    "jupyterlab>=4.3.4",
    "nltk>=3.9.1",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
]
